--- a/pacific_dashboards/lib/l10n/intl_messages.arb
+++ b/pacific_dashboards/lib/l10n/intl_messages.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2019-08-16T16:31:13.590984",
+  "@@last_modified": "2019-08-16T17:01:30.999399",
   "appName": "Custom Charts",
   "@appName": {
     "type": "text",
@@ -90,6 +90,26 @@
     "type": "text",
     "placeholders": {}
   },
+  "dislplayAllStates": "Display All States",
+  "@dislplayAllStates": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "displayAllAutority": "Display All Authority",
+  "@displayAllAutority": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "displayAllGovermant": "Display all Govermant filters",
+  "@displayAllGovermant": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "displayAllLevelFilters": "Display all Level filters",
+  "@displayAllLevelFilters": {
+    "type": "text",
+    "placeholders": {}
+  },
   "schoolsEnrollmentByState": "Schools Enrollment by State",
   "@schoolsEnrollmentByState": {
     "type": "text",
@@ -97,6 +117,11 @@
   },
   "schoolsEnrollmentByAutority": "Schools Enrollment by Authority",
   "@schoolsEnrollmentByAutority": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "schoolsEnrollmentGovtNonGovt": "Schools Enrollment Govt / \nNon-govt",
+  "@schoolsEnrollmentGovtNonGovt": {
     "type": "text",
     "placeholders": {}
   },
@@ -112,6 +137,11 @@
   },
   "autority": "Autority",
   "@autority": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "earlyChildhood": "Early Childhood",
+  "@earlyChildhood": {
     "type": "text",
     "placeholders": {}
   },
