--- a/pacific_dashboards/lib/l10n/intl_en.arb
+++ b/pacific_dashboards/lib/l10n/intl_en.arb
@@ -1,6 +1,6 @@
 {
-  "@@last_modified": "2019-08-19T08:22:15.057307",
-  "appName": "Custom Charts",
+  "@@last_modified": "2019-08-19T05:58:50.147609",
+  "appName": "Cust changeCountry",
   "@appName": {
     "type": "text",
     "placeholders": {}
