--- a/pacific_dashboards/lib/l10n/intl_de.arb
+++ b/pacific_dashboards/lib/l10n/intl_de.arb
@@ -1,11 +1,11 @@
 {
-  "@@last_modified": "2019-08-19T08:22:15.057307",
-  "appName": "Custom Charts",
+  "@@last_modified": "2019-08-19T05:58:50.147609",
+  "appName": "Cust changesCountry",
   "@appName": {
     "type": "text",
     "placeholders": {}
   },
-  "construction": "Construction",
+  "construction": "Constssruction",
   "@construction": {
     "type": "text",
     "placeholders": {}
