--- a/pacific_dashboards/lib/l10n/intl_de.arb
+++ b/pacific_dashboards/lib/l10n/intl_de.arb
@@ -5,7 +5,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "construction": "Construction",
+  "construction": "Conssssssstruction",
   "@construction": {
     "type": "text",
     "placeholders": {}
