--- a/pacific_dashboards/lib/l10n/intl_messages.arb
+++ b/pacific_dashboards/lib/l10n/intl_messages.arb
@@ -75,7 +75,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "filterByStandart": "Filter by standart",
+  "filterByStandart": "Filter by standard",
   "@filterByStandart": {
     "type": "text",
     "placeholders": {}
