--- a/pacific_dashboards/lib/l10n/intl_de.arb
+++ b/pacific_dashboards/lib/l10n/intl_de.arb
@@ -75,8 +75,8 @@
     "type": "text",
     "placeholders": {}
   },
-  "filterByStandart": "Filter by standart",
-  "@filterByStandart": {
+  "filterByStandard": "Filter by standard",
+  "@filterByStandard": {
     "type": "text",
     "placeholders": {}
   },
