--- a/pacific_dashboards/lib/l10n/intl_en.arb
+++ b/pacific_dashboards/lib/l10n/intl_en.arb
@@ -75,8 +75,8 @@
     "type": "text",
     "placeholders": {}
   },
-  "filterByStandart": "Filter by standard",
-  "@filterByStandart": {
+  "filterByStandard": "Filter by standard",
+  "@filterByStandard": {
     "type": "text",
     "placeholders": {}
   },
