--- a/pacific_dashboards/lib/res/strings/l10n/intl_en.arb
+++ b/pacific_dashboards/lib/res/strings/l10n/intl_en.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2019-11-05T16:42:54.151103",
+  "@@last_modified": "2019-12-03T17:09:14.685026",
   "appName": "Custom Charts",
   "@appName": {
     "type": "text",
@@ -307,6 +307,21 @@
   },
   "splash": "\nPACIFIC OPEN\n EDUCATION DATA",
   "@splash": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "error": "Error",
+  "@error": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "unknownError": "Unknown error occurred",
+  "@unknownError": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "serverUnavailableError": "Are are not connected to the Internet and there was no previously fetched data to display. Try again with a working Internet connection.",
+  "@serverUnavailableError": {
     "type": "text",
     "placeholders": {}
   }
